--- a/JiaoBaoYun-hb/html/quan/class-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/class-dynamic.html
@@ -42,7 +42,7 @@
 				<div id="take_camero" class="take_camero">
 					<a class="mui-icon iconfont icon-shipin"></a>
 				</div>
-				
+
 			</div>
 			<!--附件显示控件-->
 			<div id="pictures" class="img-container temWork-teaHint"></div>
@@ -70,7 +70,7 @@
 		mui.plusReady(function() {
 			//返回时，取消键盘
 			events.blurBack();
-			jQuery("#input-content").prop("maxLength",2000)
+			jQuery("#input-content").prop("maxLength", 2000)
 			var curPage = plus.webview.currentWebview();
 			var groupInfo = curPage.data;
 			CloudFileUtil.files = [];
@@ -146,25 +146,24 @@
 									console.log("传回来的值：" + JSON.stringify(datas)) //回调数据
 									if(datas.Status == 1) { //成功
 										var tokenInfos = datas.Data; //参数信息
+										var imgs = [];
 										//上传图片
-										CloudFileUtil.uploadFiles(compressedPaths, tokenInfos, function(uploadData, status) {
+										CloudFileUtil.uploadFiles(compressedPaths, tokenInfos, function(uploadData, status, index) {
 											console.log(JSON.stringify(uploadData));
-											if(JSON.parse(uploadData.responseText).key) {
-												var img = {
-													url: tokenInfos[0].Domain + JSON.parse(uploadData.responseText).key,
-													thumb: (tokenInfos[0].Domain + JSON.parse(uploadData.responseText).key).replace(saveSpace, saveSpace + "thumb/"),
-													type: 1
-												}
-												CloudFileUtil.setPic(img); //放置图片
-											} else {
-												mui.toast(uploadData.responseText);
+											imgs[index] = {
+												url: tokenInfos[0].Domain + JSON.parse(uploadData.responseText).key,
+												thumb: (tokenInfos[0].Domain + JSON.parse(uploadData.responseText).key).replace(saveSpace, saveSpace + "thumb/"),
+												type: 1
 											}
 											picCount++;
 											if(picCount == compressedPaths.length) { //所有图片已上传
 												plus.nativeUI.closeWaiting(); //关闭等待框
+												for(var i in imgs) {
+													CloudFileUtil.setPic(imgs[i]); //放置图片
+												}
+
 											}
 										});
-
 									}
 								},
 								//错误的回调
@@ -192,7 +191,7 @@
 				} else {
 					tempText = replaceAllBL(tempText);
 				}
-				if(events.limitInput(tempText,2000)){
+				if(events.limitInput(tempText, 2000)) {
 					return;
 				}
 				var TAs = getTypeAddress();
