--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-question.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-question.html
@@ -19,7 +19,7 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">提问</h1>
-			<a class="mui-icon iconfont icon-moreandroid mui-pull-right display-none"></a>
+			<a id="manage-question" class="mui-icon iconfont icon-moreandroid mui-pull-right display-none"></a>
 			<a class="mui-icon iconfont icon-ruqun mui-pull-right" id="addExpert"></a>
 		</header>
 		<div class="mui-content"></div>
@@ -37,7 +37,7 @@
 				if(temp0 > 0) {
 					data.channelInfo.TabId = temp0;
 				}
-				console.log('qiuzhi-question.html:' + JSON.stringify(data));
+				console.log('qiuzhi-question.html:获取的问题数据' + JSON.stringify(data));
 				events.createSubAppendMain(main, 'qiuzhi-questionSub.html', data, function(sub) {
 					setTimeout(function() {
 						wd.close();
@@ -49,6 +49,10 @@
 				events.addTap('addExpert', function() {
 					events.openNewWindowWithData('experts_main.html', data);
 				});
+				events.addTap("manage-question",function(){
+					console.log("求知问题界面向子页面传值")
+					events.fireToPageNone("qiuzhi-questionSub.html","manageQuestion");
+				})
 			});
 		</script>
 	</body>
