调整档案删除逻辑，修改previewImage

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -698,7 +698,7 @@
 					postFirstFile();
 					document.getElementById("cloudstorage_0").innerHTML = '';
 					//73.（云档案）按家长获取学生档案姓名
-					//postUserStudent();
+					postUserStudent();
 					//手机通讯录，手机图库
 					addcloudstorage_0_0();
 					//假数据
