--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-question.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-question.html
@@ -26,6 +26,7 @@
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/libs/myStorage/myStorage.js"></script>
+		<script src="../../js/storageKeyName.js"></script>
 		<script type="text/javascript">
 			mui.init();
 			mui.plusReady(function() {
