做作业关闭

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -781,7 +781,11 @@
 							}
 							if(teacherClasses.length > 0 || studentClasses.length > 0) {
 								console.log('teacherClasses:' + teacherClasses.length + ',' + studentClasses.length);
-								sendMessageToHomework(teacherClasses, studentClasses);
+//								sendMessageToHomework(teacherClasses, studentClasses);
+								events.openNewWindowWithData("../homework/homework-tea.html",{
+									teacherClasses: teacherClasses,
+									studentClasses: studentClasses
+								})
 							} else {
 								mui.toast('您还未加入班级');
 							}
@@ -1338,20 +1342,20 @@
 				});
 			}
 
-			var sendMessageToHomework = function(teacherClasses, studentClasses) {
-				if(homeworkReady) {
-					events.closeWaiting();
-					events.fireToPageWithData('../homework/homework-tea.html', 'postClasses', {
-						teacherClasses: teacherClasses,
-						studentClasses: studentClasses
-					})
-				} else {
-					events.showWaiting();
-					setTimeout(function() {
-						sendMessageToHomework(teacherClasses, studentClasses)
-					}, 500);
-				}
-			}
+//			var sendMessageToHomework = function(teacherClasses, studentClasses) {
+//				if(homeworkReady) {
+//					events.closeWaiting();
+//					events.fireToPageWithData('../homework/homework-tea.html', 'postClasses', {
+//						teacherClasses: teacherClasses,
+//						studentClasses: studentClasses
+//					})
+//				} else {
+//					events.showWaiting();
+//					setTimeout(function() {
+//						sendMessageToHomework(teacherClasses, studentClasses)
+//					}, 500);
+//				}
+//			}
 
 			/**
 			 * 修改档案的名称
