--- a/JiaoBaoYun-hb/html/cloud/record_student_add.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_add.html
@@ -85,7 +85,7 @@
 				var main = plus.webview.currentWebview(); //获取当前窗体对象
 				mainData = main.data; //接收页面传入的参数值
 				console.log(main.id + ' ' + JSON.stringify(mainData));
-				document.getElementById("title").innerText = mainData.data.StudentName;
+				document.getElementById("title").innerText = mainData.data.DocName;
 			}
 
 			/**
