--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
@@ -155,7 +155,7 @@
 
 					document.getElementById('answerContent').placeholder = "修改回答,最多4000字";
 					jQuery('#answerContent').prop("maxLength", "4000"); //设置最长
-					var answerInfo = e.detail.data;
+					answerInfo = e.detail.data;
 					setAnswerInfo(answerInfo);
 				})
 				setListener();
@@ -342,7 +342,7 @@
 								if(events.limitInput(answerContent, 4000)) {
 									return;
 								}
-								changeAnswer();
+								changeAnswer(answerContent);
 								break;
 							default:
 								break;
@@ -355,8 +355,23 @@
 			/**
 			 * 修改回答
 			 */
-			var changeAnswer = function() {
-
+			var changeAnswer = function(answerContent) {
+				var wd1=events.showWaiting();
+				var comData={
+					answerId: answerInfo.AnswerId,//回答ID
+					answerContent:answerContent,//回答内容,4000
+					encAddr:''//附件地址,300,多个的情况例如：1.jpg|2.jpg
+				};
+				postDataQZPro_setAnswerById(comData,wd1,function(data){
+					wd1.close();
+					console.log("更改回答的值："+JSON.stringify(data));
+					if(data.RspCode==0&&data.RspData.Result){
+						mui.fire(plus.webview.currentWebview().opener(),"answerChanged",comData);
+						mui.back();
+					}else{
+						mui.toast("更改回答失败！");
+					}
+				})
 			}
 			/**
 			 * 回答问题
