--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -352,7 +352,7 @@
 					},
 				});
 
-//				events.preload("../homework/homework-tea.html", 300);
+				//				events.preload("../homework/homework-tea.html", 300);
 				events.preload('storage_main.html', 300); //预加载云存储
 				window.addEventListener("topPopover", function(e) {
 					mui('#topPopover').popover('toggle')
@@ -368,9 +368,9 @@
 						events.openNewWindowWithData('../mine/ReadQRCode.html', '');
 					}
 				})
-//				window.addEventListener("homeworkReady", function() {
-//					homeworkReady = true;
-//				});
+				//				window.addEventListener("homeworkReady", function() {
+				//					homeworkReady = true;
+				//				});
 
 				//重新登录或者自动登录后获取的信息
 				window.addEventListener('infoChanged', function() {
@@ -779,8 +779,8 @@
 							}
 							if(teacherClasses.length > 0 || studentClasses.length > 0) {
 								console.log('teacherClasses:' + teacherClasses.length + ',' + studentClasses.length);
-//								sendMessageToHomework(teacherClasses, studentClasses);
-								events.openNewWindowWithData("../homework/homework-tea.html",{
+								//								sendMessageToHomework(teacherClasses, studentClasses);
+								events.openNewWindowWithData("../homework/homework-tea.html", {
 									teacherClasses: teacherClasses,
 									studentClasses: studentClasses
 								});
@@ -848,7 +848,7 @@
 					// 等待的对话框
 					var wd = events.showWaiting();
 					postDataPro_getStudentDocByParent(comData, wd, function(data) {
-						console.log('按家长获取档案文件夹getStudentDocByParent:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+						console.log('91.按家长获取档案文件夹getStudentDocByParent:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 						document.getElementById("cloudstorage_0").innerHTML = '';
 						addcloudstorage_0_0(); //手机通讯录，手机图库
 						studentDoc = {};
@@ -856,9 +856,7 @@
 							//设置页面显示
 							for(var i = 0; i < data.RspData.Data.length; i++) {
 								//console.log('学生档案 ' + i + '|' + JSON.stringify(data.RspData.Data[i]));
-								if(data.RspData.Data[i].DocName) {
-									addcloudstorage_0_1(data.RspData.Data[i]);
-								}
+								addcloudstorage_0_1(data.RspData.Data[i]);
 							}
 						} else {
 							if(data.RspCode != 9) {
@@ -964,7 +962,8 @@
 					li.style.width = maxWidth + 'px';
 					li.style.height = cloudFirstItemHeight / 2 + 'px';
 					document.getElementById("cloudstorage_0").appendChild(li);
-					document.getElementById("data_name_" + id).innerText = data.DocName + '档案';
+					var name = data.DocName || data.StudentName;
+					document.getElementById("data_name_" + id).innerText = name + '档案';
 					li.style.paddingTop = (cloudFirstItemHeight / 2 - (li.lastElementChild.offsetHeight + li.lastElementChild.offsetTop - li.firstElementChild.offsetTop)) / 2 + 'px';
 				}
 
@@ -1343,20 +1342,20 @@
 				});
 			}
 
-//			var sendMessageToHomework = function(teacherClasses, studentClasses) {
-//				if(homeworkReady) {
-//					events.closeWaiting();
-//					events.fireToPageWithData('../homework/homework-tea.html', 'postClasses', {
-//						teacherClasses: teacherClasses,
-//						studentClasses: studentClasses
-//					})
-//				} else {
-//					events.showWaiting();
-//					setTimeout(function() {
-//						sendMessageToHomework(teacherClasses, studentClasses)
-//					}, 500);
-//				}
-//			}
+			//			var sendMessageToHomework = function(teacherClasses, studentClasses) {
+			//				if(homeworkReady) {
+			//					events.closeWaiting();
+			//					events.fireToPageWithData('../homework/homework-tea.html', 'postClasses', {
+			//						teacherClasses: teacherClasses,
+			//						studentClasses: studentClasses
+			//					})
+			//				} else {
+			//					events.showWaiting();
+			//					setTimeout(function() {
+			//						sendMessageToHomework(teacherClasses, studentClasses)
+			//					}, 500);
+			//				}
+			//			}
 
 			/**
 			 * 修改档案的名称
