通知专家的回答界面刷新界面

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllAnswer.html
@@ -171,6 +171,11 @@
 				pageIndex = 1;
 				flagRef = 0;
 				getAnswersByUser(ExpertsInfo.UserId);
+				window.addEventListener("answerShield",function(){
+					pageIndex = 1;
+					flagRef = 0;
+					getAnswersByUser(ExpertsInfo.UserId);
+				})
 				mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
 					var index = this.id.replace('li', '');
 					events.fireToPageNone('qiuzhi-answerDetailSub.html', 'answerInfo', JSON.parse(this.dataset.info));
